# schlitz_2026

./: .gitignore  CMakeLists.txt  compile_flags.txt  effects.c  effects.h  platformio.ini  programs.c  ws2801_ambient.c
components/led_viz/: CMakeLists.txt
patterns/: chaos.c  count_up.c  drop.c  gradient_sweep.c  noise.c  panel_pulse.c  searchlight.c  shared.h  sine.c  sync_pulse.c  wave.c
src/: main.c
src/mesh/: mesh_common.c  mesh_common.h  mesh_config.h  mesh_node.c  mesh_node.h  mesh_root.c  mesh_root.h  ptp_sync.h  role.h  state_sync.h
